// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist container should display all playlists 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="playlists_container"
    >
      <div
        class="header_container"
      >
        <div
          class="header_container"
        >
          Your playlists
        </div>
        <button
          class="ui basic button nuclear button"
          data-testid="import-from-file"
        >
          <i
            aria-hidden="true"
            class="file text icon"
          />
          Import from file (JSON)
        </button>
      </div>
      <div
        class="ui segment playlists_segment"
      >
        <div
          class="playlist_outside_container"
        >
          <div
            class="playlist_container"
          >
            <div
              class="playlist_thumbnail_container"
            >
              <img
                class="playlist_thumbnail"
                src="test thumbnail"
              />
            </div>
            <div
              class="playlist_info"
            >
              <h4
                class="playlist_title"
              >
                test playlist
              </h4>
              <p>
                2 songs
              </p>
            </div>
          </div>
        </div>
        <div
          class="playlist_outside_container"
        >
          <div
            class="playlist_container"
          >
            <div
              class="playlist_thumbnail_container"
            >
              <img
                class="playlist_thumbnail"
                src="test thumbnail"
              />
            </div>
            <div
              class="playlist_info"
            >
              <h4
                class="playlist_title"
              >
                test playlist 2
              </h4>
              <p>
                2 songs
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Playlist container should display empty playlists view 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="playlists_container"
    >
      <div
        class="header_container"
      >
        <span />
        <button
          class="ui basic button nuclear button"
          data-testid="import-from-file"
        >
          <i
            aria-hidden="true"
            class="file text icon"
          />
          Import from file (JSON)
        </button>
      </div>
      <div
        class="empty_state"
      >
        <i
          class="icons"
        >
          <i
            aria-hidden="true"
            class="list alternate outline icon"
          />
        </i>
        <h2>
          No playlists.
        </h2>
        <div>
          Try to create some playlists or import by url and they will appear here!
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
